# ilua

./: .editorconfig  .gitignore  .gitmodules  CHANGES.md  README.md  pyproject.toml  setup.cfg  setup.py
defaultspec/: kernel.json  logo-license.txt
ilua/: __init__.py  _unixfifo.py  _win32namedpipe.py  app.py  appbase.py  builtins.lua  connection.py  consoleapp.py  error.py  history.py  inspector.py  interp.lua  kernel.py  kernelbase.py  message.py  namedpipe.py  netstrio.py  pipebase.py  pipepair.py  proto.py  sockets.py  version.py  websocket.py
ilua/ext/: netstring.lua
ilua/lualibs/: builtins.lua
ilua/openresty/: builtins.lua  interp.lua  nginx.conf
ilua/pipe/: __init__.py  _unixfifo.py  _win32namedpipe.py  pipebase.py
ilua/txkernel/: kernelapp.py  sockets.py
openresty/: nginx.conf
scripts/: getdeps.sh  manualparser.py
