[metadata]
name = ilua
author = Guy Sviry
author_email = sviryguy@gmail.com
license = GPLv2
description = Portable Lua kernel for Jupyter
keywords =
    lua
    interactive
    console
    jupyter
    kernel
url = https://github.com/guysv/ilua
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Interpreters
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
packages = find:
install_requires =
    twisted
    termcolor
    pygments
    txzmq
    jupyter_core
    jupyter_console
    pywin32;sys_platform=="win32"

[options.entry_points]
console_scripts = ilua=ilua.consoleapp:main

[options.package_data]
ilua =
    interp.lua
    builtins.lua
    ext/json.lua
    ext/netstring.lua
    ext/inspect.lua

[bdist_wheel]
universal = 1
